# social-auto-upload

./: CLAUDE.md  CODEX.md  README.md  pyproject.toml  requirements.txt  sau_backend.py  start-win.bat
.omx/: metrics.json
.omx/logs/: omx-2026-04-25.jsonl  tmux-hook-2026-04-25.jsonl  turns-2026-04-25.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  session.json  tmux-hook-state.json
db/: createTable.py
docs/: mpv-preview.md
myUtils/: translation.py  video_processor.py  youtube_downloader.py
sau_core/: __init__.py  services.py
sau_desktop/: _shared.py  about_page.py  account_page.py  download_page.py  main.py  mpv_preview.py  publish_page.py  settings_page.py
sau_desktop/pages/: __init__.py  account_page.py  dashboard_page.py  download_page.py  material_page.py  publish_page.py  settings_page.py
sau_frontend/: README.md  vite.config.js
sau_frontend/src/: App.vue
sau_frontend/src/api/: download.js  material.js  system.js
sau_frontend/src/router/: index.js
sau_frontend/src/stores/: app.js
sau_frontend/src/views/: DownloadCenter.vue  MaterialManagement.vue  PublishCenter.vue  SystemSettings.vue
tests/: test_desktop_smoke.py  test_services.py  test_video_processing.py  test_youtube_downloader.py
tools/: install_mpv_runtime.py  watch_desktop.py
uploader/douyin_uploader/: main.py
