[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "social-auto-upload"
version = "0.1.0"
description = "Social media auto uploader"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "loguru==0.7.3",
  "opencv-python>=4.13.0.92",
  "patchright==1.58.2",
  "PySide6>=6.7,<7",
  "qrcode==8.2",
  "requests==2.32.3",
  "segno>=1.6.6",
  "yt-dlp==2026.03.17",
]

[project.scripts]
sau = "sau_cli:main"
sau-desktop = "sau_desktop.main:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli_main", "conf", "sau_backend", "sau_cli"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sau_core*", "sau_desktop*", "uploader*", "utils*", "myUtils*"]

[tool.setuptools.package-data]
utils = ["stealth.min.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
